# semver-test

./: CHANGELOG.md  app.py  pyproject.toml
.github/workflows/: ci-cd.yml
