[project]
name = "semver-test"
version = "0.4.0"
description = "Test repo to replicate semantic-release divergence issue"
requires-python = ">=3.11"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
branch = "main"
commit_parser = "angular"
build_command = ""
upload_to_pypi = false
commit_message = "chore(release): v{version} [skip ci]"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build", "chore", "ci", "docs", "feat",
    "fix", "perf", "refactor", "style", "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true
